# hello-nuxtwasm

./: .envrc  Cargo.toml  README.md  app.vue  nuxt.config.ts
src/: lib.rs
