[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.9.1", features = ["v4", "v7", "js"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "console",
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }

[lib]
crate-type = ["cdylib", "rlib"]
